knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition__c/pqcrush__Mapping_Condition__c.object-meta.xml
<CustomObject>
    <label>Condition</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Mapping Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>