knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition__c/fields/pqcrush__Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Condition_Group__c</fullName>
    <label>Condition Group</label>
    <referenceTo>pqcrush__Mapping_Condition_Group__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>