knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition__c/fields/pqcrush__Value__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>